Working on Municiplity Stats screen

--- a/DestoPesto/DestoPesto/Properties/Resources.resx
+++ b/DestoPesto/DestoPesto/Properties/Resources.resx
@@ -540,4 +540,10 @@
   <data name="UserNameInputLabel" xml:space="preserve">
     <value>User name</value>
   </data>
+  <data name="MunicipalityScore" xml:space="preserve">
+    <value>Municipality score</value>
+  </data>
+  <data name="ScoreExplain" xml:space="preserve">
+    <value>Smaller score is better</value>
+  </data>
 </root>
