--- a/DestoPesto/DestoPesto/Properties/Resources.el-GR.resx
+++ b/DestoPesto/DestoPesto/Properties/Resources.el-GR.resx
@@ -534,4 +534,10 @@
   <data name="UserNameInputLabel" xml:space="preserve">
     <value>Ονομα χρήστη</value>
   </data>
+  <data name="MunicipalityScore" xml:space="preserve">
+    <value>Κατάταξη δήμου</value>
+  </data>
+  <data name="ScoreExplain" xml:space="preserve">
+    <value>Μικρότερη κατάταξη καλύτερη θέση</value>
+  </data>
 </root>
