--- a/DestoPesto/DestoPesto/Properties/Resources.resx
+++ b/DestoPesto/DestoPesto/Properties/Resources.resx
@@ -541,9 +541,12 @@
     <value>User name</value>
   </data>
   <data name="MunicipalityScore" xml:space="preserve">
-    <value>Municipality score</value>
+    <value>scores out of 332 municipalities at position</value>
   </data>
   <data name="ScoreExplain" xml:space="preserve">
     <value>Smaller score is better</value>
+  </data>
+  <data name="TotalMunicipalities" xml:space="preserve">
+    <value>/ 335</value>
   </data>
 </root>
