--- a/DestoPesto/DestoPesto/Properties/Resources.el-GR.resx
+++ b/DestoPesto/DestoPesto/Properties/Resources.el-GR.resx
@@ -565,4 +565,16 @@
   <data name="5stars" type="System.Resources.ResXNullRef, System.Windows.Forms">
     <value />
   </data>
+  <data name="MunicipalityAvrgRepairDays" xml:space="preserve">
+    <value>Μέσσος χρόνος αποκατάστασης :</value>
+  </data>
+  <data name="MunicipalityFixed" xml:space="preserve">
+    <value>Διορθωμένες :</value>
+  </data>
+  <data name="MunicipalityUnfixed" xml:space="preserve">
+    <value>Εκκρεμείς κατεχνίες :</value>
+  </data>
+  <data name="MunicipalityUnfixedDays" xml:space="preserve">
+    <value>Παλαιότερη εκκρεμής κακοτεχνιά :</value>
+  </data>
 </root>
