--- a/DestoPesto/DestoPesto/Properties/Resources.resx
+++ b/DestoPesto/DestoPesto/Properties/Resources.resx
@@ -171,9 +171,6 @@
   <data name="LocalNotificationTitle" xml:space="preserve">
     <value>Damage Report Alert</value>
   </data>
-  <data name="CancleText" xml:space="preserve">
-    <value>Cancel</value>
-  </data>
   <data name="LocationPrompt" xml:space="preserve">
     <value>The app uses location data when a photo is taken as part of the control on the accuracy of information provided. This data is stored in the application to allow it to determine the exact location that the photo was taken. </value>
   </data>
@@ -553,16 +550,16 @@
     <value>of</value>
   </data>
   <data name="MunicipalityAvrgRepairDays" xml:space="preserve">
-    <value>Μέσσος χρόνος αποκατάστασης :</value>
+    <value>Average repair time</value>
   </data>
   <data name="MunicipalityFixed" xml:space="preserve">
-    <value>Διορθωμένες :</value>
+    <value>Total restored</value>
   </data>
   <data name="MunicipalityUnfixed" xml:space="preserve">
-    <value>Εκκρεμείς κατεχνίες :</value>
+    <value>Total unrestored defects</value>
   </data>
   <data name="MunicipalityUnfixedDays" xml:space="preserve">
-    <value>Παλαιότερη εκκρεμής κακοτεχνιά :</value>
+    <value>Oldest unrestored defect</value>
   </data>
   <data name="2stars" xml:space="preserve">
     <value />
@@ -578,5 +575,11 @@
   </data>
   <data name="PermissionsScreenFileLink" xml:space="preserve">
     <value>https://destopesto.blob.core.windows.net/destopesto/docs/permissions.txt</value>
+  </data>
+  <data name="DaysText" xml:space="preserve">
+    <value>days</value>
+  </data>
+  <data name="PercentageOfRestoredDefects" xml:space="preserve">
+    <value>Percentage of restored defects</value>
   </data>
 </root>
