Stats on Main screen are fully functional

--- a/DestoPesto/DestoPesto/Properties/Resources.el-GR.resx
+++ b/DestoPesto/DestoPesto/Properties/Resources.el-GR.resx
@@ -573,4 +573,7 @@
   <data name="TotalFixedDamages" xml:space="preserve">
     <value>Σύνολο αποκαταστημένων</value>
   </data>
+  <data name="MunicialityText" xml:space="preserve">
+    <value>Δήμος</value>
+  </data>
 </root>
