--- a/DestoPesto/DestoPesto/Properties/Resources.resx
+++ b/DestoPesto/DestoPesto/Properties/Resources.resx
@@ -538,7 +538,7 @@
     <value>User name</value>
   </data>
   <data name="MunicipalityScore" xml:space="preserve">
-    <value>Municipality's score is</value>
+    <value>Municipality position is at</value>
   </data>
   <data name="ScoreExplain" xml:space="preserve">
     <value>Smaller score is better</value>
@@ -574,6 +574,6 @@
     <value>Total fixed </value>
   </data>
   <data name="MunicialityText" xml:space="preserve">
-    <value>Municipality</value>
+    <value>Mun : </value>
   </data>
 </root>
