--- a/DestoPesto/DestoPesto/Properties/Resources.resx
+++ b/DestoPesto/DestoPesto/Properties/Resources.resx
@@ -499,7 +499,7 @@
     <value>Are you in?</value>
   </data>
   <data name="AcceptedPhotosLabel" xml:space="preserve">
-    <value>Total qualified photos</value>
+    <value>Total photos</value>
   </data>
   <data name="BirthDateLabel" xml:space="preserve">
     <value>Birthdate</value>
@@ -575,5 +575,20 @@
   </data>
   <data name="MunicialityText" xml:space="preserve">
     <value>The municipality</value>
+  </data>
+  <data name="Oldest_Sub" xml:space="preserve">
+    <value>Longest-standing issue</value>
+  </data>
+  <data name="PercentageOfFixed" xml:space="preserve">
+    <value>Percentage of fixed issues</value>
+  </data>
+  <data name="AverageRepairDays" xml:space="preserve">
+    <value>Average restoration days</value>
+  </data>
+  <data name="TotalSubs" xml:space="preserve">
+    <value>Total posts</value>
+  </data>
+  <data name="TotalUnfixedSubs" xml:space="preserve">
+    <value>Total unrestored issues</value>
   </data>
 </root>
