--- a/DestoPesto/DestoPesto/Properties/Resources.el-GR.resx
+++ b/DestoPesto/DestoPesto/Properties/Resources.el-GR.resx
@@ -589,6 +589,6 @@
     <value>Σύνολο εκκρεμοτήτων</value>
   </data>
   <data name="UserProfileDisclaimer" xml:space="preserve">
-    <value>Όλες οι αναρτήσεις είναι ανώνυμες και τα προσωπικά σας δεδομένα δεν θα αποσταλλούν ποτέ στον Δήμαρχο</value>
+    <value>Όλες οι αναρτήσεις είναι ανώνυμες ακόμα και να συμπληρώσετε τα προσωπικά σας στοιχεία </value>
   </data>
 </root>
