Bugs after RElease

--- a/DestoPesto/DestoPesto/Properties/Resources.el-GR.resx
+++ b/DestoPesto/DestoPesto/Properties/Resources.el-GR.resx
@@ -511,7 +511,7 @@
     <value>Email</value>
   </data>
   <data name="MobilePhoneLabel" xml:space="preserve">
-    <value>Κινητό τηλέφωνο</value>
+    <value>Κινητό</value>
   </data>
   <data name="PersonNameLabel" xml:space="preserve">
     <value>Ονοματεπώνυμο</value>
@@ -590,5 +590,8 @@
   </data>
   <data name="UserProfileDisclaimer" xml:space="preserve">
     <value>Όλες οι αναρτήσεις είναι ανώνυμες ακόμα και να συμπληρώσετε τα προσωπικά σας στοιχεία </value>
+  </data>
+  <data name="UploadPhoto" xml:space="preserve">
+    <value>Ανεβάζω την φωτογραφία</value>
   </data>
 </root>
