--- a/DestoPesto/DestoPesto/Properties/Resources.resx
+++ b/DestoPesto/DestoPesto/Properties/Resources.resx
@@ -187,7 +187,7 @@
     <value>No</value>
   </data>
   <data name="NumUserText" xml:space="preserve">
-    <value>Total users who reported this : </value>
+    <value>Total reports : </value>
   </data>
   <data name="Oktext" xml:space="preserve">
     <value>OK</value>
